fix create property button overlapping with property cards

--- a/app/src/Components/PropertyListings.css
+++ b/app/src/Components/PropertyListings.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   flex-shrink: 0;
   margin: 0 4rem;
+  margin-top:4.5rem;
   width: calc(100% - 15.9101rem);
 }
 
