--- a/app/src/Pages/HomePage.css
+++ b/app/src/Pages/HomePage.css
@@ -74,7 +74,7 @@
         height: 2.5rem;
         justify-content: center;
         line-height: 1.1725;
-        margin: 0rem 77.033rem 2.978rem 0.111rem;
+        margin: 0rem 77.033rem 0.978rem 0.111rem;
         overflow: hidden;
         position: relative;
         white-space: nowrap;
